OG description fix, style changes

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
         <title>Ghost Investigation Encyclopedia</title>
         <link rel="shortcut icon" href="favicon.ico?v=2" type="image/x-icon">
         
-        <meta name="description" content="A book containing all knowledge about ghost investigation.">
         <meta name="theme-color" content="#b7ffd1">
         <meta property="og:title" content="Ghost Investigation Encyclopedia">
+        <meta property="og:description" content="A book containing all knowledge about ghost investigation.">
         <meta property="og:type" content="website">
         <meta property="og:url" content="https://namelessju.github.io/Ghost-Investigation-Encyclopedia/index.html">
         <meta property="og:image" content="https://namelessju.github.io/Ghost-Investigation-Encyclopedia/icon-maskable.png">
@@ -24,8 +24,8 @@
         <link rel="stylesheet" href="assets/fonts/fontawesome/css/fontawesome.min.css">
         <link rel="stylesheet" href="assets/fonts/fontawesome/css/solid.min.css">
 
-        <link rel="stylesheet" href="style.css?v=10">
-        <script src="script.js?v=9"></script>
+        <link rel="stylesheet" href="style.css?v=11">
+        <script src="script.js?v=10"></script>
         
         <link rel="manifest" href="manifest.json?v=5">
     </head>
@@ -53,8 +53,8 @@
                     <header class="page-header">
                         <h1>Error</h1>
                     </header>
-                    <div class="page-body">
-                        <div id="error-page-message">
+                    <div class="page-body page-body-centered">
+                        <div>
                             <h2>Page not found.</h2>
                             <p>This page has either been deleted or never existed in the first place.</p>
                             <p><a href="#contents">Contents list</a></p>
@@ -77,10 +77,8 @@
                         <section class="page-half">
                             <h2>Version</h2>
                             <p>When new updates for Phasmophobia get released, parts of this encyclopedia may become outdated.</p>
-                            <p>
-                                <i>This encyclopedia is currently up-to-date with game version <b>0.7.2.0</b></i><br>
-                                <a href="#update">Changes</a>
-                            </p>
+                            <p><i>This encyclopedia is currently up-to-date with game version <b><a href="#update">0.7.2.0</a></b></i></p>
+                            <p></p>
 
                             <h2>Credits</h2>
                             <ul class="nomarkers">
@@ -1054,12 +1052,10 @@
                     <header class="page-header">
                         <h1 id="update">Phasmophobia Update v0.7.2.0</h1>
                     </header>
-                    <div class="page-body">
-                        <div>
-                            <p>The Halloween decorations and event have been removed.</p>
-                            <p>The catalan language is now supported by Ghost Huntin' Distribution and ghosts have been discovered to speak it aswell.</p>
-                            <p><a href="https://store.steampowered.com/news/app/739630/view/3435710744921094844" target="_blank"><i class="fa fa-up-right-from-square"></i> Full page notes</a></p>
-                        </div>
+                    <div class="page-body page-body-full">
+                        <p>The Halloween decorations have been removed and the Halloween '22 event is over.</p>
+                        <p>The catalan language is now supported by Ghost Huntin' Distribution and ghosts have been discovered to speak it aswell.</p>
+                        <p><a href="https://store.steampowered.com/news/app/739630/view/3435710744921094844" target="_blank"><i class="fa fa-up-right-from-square"></i> Full patch notes</a></p>
                     </div>
                 </article>
 
