Update bookmark, style changes

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <meta property="og:description" content="A book containing all knowledge about ghost investigation.">
         <meta property="og:type" content="website">
         <meta property="og:url" content="https://namelessju.github.io/Ghost-Investigation-Encyclopedia/index.html">
-        <meta property="og:image" content="https://namelessju.github.io/Ghost-Investigation-Encyclopedia/icon-maskable.png">
+        <meta property="og:image" content="https://namelessju.github.io/Ghost-Investigation-Encyclopedia/icon.png">
         <meta property="og:image:type" content="image/png">
         <meta property="og:image:width" content="512">
         <meta property="og:image:height" content="512">
@@ -24,8 +24,8 @@
         <link rel="stylesheet" href="assets/fonts/fontawesome/css/fontawesome.min.css">
         <link rel="stylesheet" href="assets/fonts/fontawesome/css/solid.min.css">
 
-        <link rel="stylesheet" href="style.css?v=11">
-        <script src="script.js?v=10"></script>
+        <link rel="stylesheet" href="style.css?v=12">
+        <script src="script.js?v=11"></script>
         
         <link rel="manifest" href="manifest.json?v=5">
     </head>
@@ -38,7 +38,7 @@
                     <a class="bookmark" href="#ghost-types" title="Ghost Types"><i class="fa fa-ghost"></i></a>
                     <a class="bookmark" href="#locations" title="Locations"><i class="fa fa-map"></i></a>
                     <a class="bookmark" href="#challenges" title="Challenges & Events"><i class="fa fa-medal"></i></a>
-                    <a class="bookmark bookmark-special" href="#update" title="Phasmophobia Update"><i class="fa fa-star fa-beat"></i></a>
+                    <a id="bookmark-update" class="bookmark bookmark-special" href="#update" title="Phasmophobia Update"><i class="fa fa-star fa-beat"></i></a>
                 </div>
 
                 <div id="bookmarks-right">
@@ -49,7 +49,7 @@
 
             <div id="pages-container">
 
-                <article id="error-page" class="page">
+                <article id="page-error" class="page">
                     <header class="page-header">
                         <h1>Error</h1>
                     </header>
@@ -1048,13 +1048,13 @@
 
                 <!-- UPDATE -->
                 
-                <article id="page-update" class="page" data-updatedate="2022-11-08">
+                <article id="page-update" class="page" data-updateversion="0.7.2.0" data-updatedate="2022-11-08">
                     <header class="page-header">
                         <h1 id="update">Phasmophobia Update v0.7.2.0</h1>
                     </header>
                     <div class="page-body page-body-full">
-                        <p>The Halloween decorations have been removed and the Halloween '22 event is over.</p>
-                        <p>The catalan language is now supported by Ghost Huntin' Distribution and ghosts have been discovered to speak it aswell.</p>
+                        <p>Halloween decorations have been removed and the Halloween '22 event has ended.</p>
+                        <p>Ghost Huntin' Distribution added catalan to the list of available languages.</p>
                         <p><a href="https://store.steampowered.com/news/app/739630/view/3435710744921094844" target="_blank"><i class="fa fa-up-right-from-square"></i> Full patch notes</a></p>
                     </div>
                 </article>
