Text changes and link additions

--- a/index.html
+++ b/index.html
@@ -158,12 +158,12 @@
                         </section>
                         <section class="page-half">
                             <h2>Favourite Room</h2>
-                            <p>Ghosts have room that was special to them during their lifetime. They mainly haunt that room, but may still wander to the area around it.</p>
-                            <p>When investigating ghosts it is very important to locate the ghost's favourite room to be able to collect evidence.</p>
+                            <p>Ghosts mainly haunt one specific room, but may still wander to the area around it.</p>
+                            <p>When investigating ghosts it is key to locate the ghost's favourite room to be able to collect evidence.</p>
                             <p>
-                                On larger locations one should start by narrowing down the search area by scanning the location with a parabolic microphone.<br>
-                                Once you have a smaller area in which you believe the ghost to be active, walk around in it with an EMF reader and listen for any interactions - as soon as you hear something, search for the object by scanning for an EMF in the direction you heard the sound from.<br>
-                                The ghost's favourite room should be very close to where the interaction happened.
+                                On larger locations one should narrow down the search area using a <a href="#parabolic-microphone">parabolic microphone</a>.<br>
+                                Once you have a smaller area in which you believe the ghost to be active, walk through it with an <a href="#emf-reader">EMF reader</a> and listen for any interactions - as soon as you hear something, search for the object by scanning for an EMF in the direction you heard the sound from.<br>
+                                The ghost's favourite room should be very close to where the interaction occured.
                             </p>
                         </section>
                     </div>
@@ -175,20 +175,21 @@
                     </header>
                     <div class="page-body">
                         <section class="page-half">
-                            <p>Ghosts start to hunt down people when they get scared enough <i>(&lt;= 50% average sanity for most ghost types)</i>.</p>
+                            <p>Ghosts start to hunt down people when they get scared enough <i>(&lt;= 50% average <a href="#sanity">sanity</a> for most ghost types)</i>.</p>
                             <p>Hunts can be recognized by the front door locking and electrical devices malfunctioning.</p>
                             <p>The ghost will not immediately be able to manifest when a hunt starts, giving investigators a few seconds to get away.</p>
                             <p>Once a hunt ends, all lights in the location will turn off. Additionally, you can check if the ghost is still hunting by trying to flip a light switch - if it's blocked, there's an ongoing hunt.</p>
 
                             <h2 id="cursed-hunts">Cursed Hunts</h2>
-                            <p>When cursed possessions trigger a hunt they simultaneously curse them, making that and any future hunts last longer.</p>
+                            <p>Whenever <a href="#cursed-possessions">cursed possessions</a> cause a hunt they simultaneously curse them, making that and any future hunts last longer.</p>
                         </section>
                         <section class="page-half">
                             <h2>Survival</h2>
-                            <p>The first step to be able to survive a ghost's hunt is to search and memorize a hiding spot - <b>before</b> you get hunted!</p>
-                            <p>Ghosts can sense activated electrical equipment around them and will know your location if you are holding one.</p>
-                            <p>You should try to break the ghost's line of sight to you at least twice before entering a hiding spot, as ghosts check your last known location. They may also search the last hiding spot they have found you at in a previous hunt!</p>
-                            <p>If you are in a dead end, you can still escape by smudging the ghost, making it lose it's orientation for 6 seconds and wander around aimlessly.</p>
+                            <p>The first step to be able to survive a hunting ghost is to search and memorize a hiding spot <b>before</b> you get hunted!</p>
+                            <p>Ghosts can sense activated electrical equipment around them and will be notified of your location if you are holding one.</p>
+                            <p>Try to break the ghost's line of sight to you before entering a hiding spot, as ghosts check your last known location! They may also search the last hiding spot they have found you at in a previous hunt!</p>
+                            <p>Preferable hiding spots are lockers and cabinets, which you need to hold closed!</p>
+                            <p>You can escape the ghost by <a href="#smudge-stick">smudging</a> it, which disorients it for 6 seconds, causing it to wander around aimlessly.</p>
                         </section>
                     </div>
                 </article>
@@ -205,7 +206,7 @@
                                 <li>Ghosts can immediately start moving during ghost events</li>
                                 <li>No ghost flickering during a ghost event <i>(devices still malfunction)</i></li>
                                 <li>Ghosts always make the same sound during their hunts, but varying ones in events</li>
-                                <li>Certain sounds are only used for hunts, while some others only get used during events</li>
+                                <li>Certain sounds are only used in hunts, while some others are only made during events</li>
                             </ul>
                         </section>
                         <section class="page-half">
@@ -670,7 +671,7 @@
                         <section class="page-half">
                             <p>
                                 Evidences are the main way of indentifying ghost types.<br>
-                                All ghosts usually show a specific combination of 3 signs that tell what type you're dealing with.
+                                All ghosts usually show a specific combination of 3 evidences that tell what type you're dealing with.
                             </p>
                             <p>
                                 While it is possible to identify a lot of ghost types using their specific behaviour, abilities or other traits, using evidence is by far the easiest and most reliable form of identification and should be used when possible.
@@ -698,7 +699,7 @@
                     <div class="page-body">
                         <section class="page-half">
                             <p>Some ghosts cool down the area around them more than others, bringing the temperature down to freezing values.</p>
-                            <p>These are detectable either by checking with a Thermometer or by watching your breath: in freezing temperatures your breath will become visible.</p>
+                            <p>These are detectable either by checking with a <a href="#thermometer">thermometer</a> or by watching your breath: in freezing temperatures your breath will become visible.</p>
                         </section>
                         <section class="page-half">
                             <div class="image-wrapper">
@@ -716,7 +717,7 @@
                     <div class="page-body">
                         <section class="page-half">
                             <p>All ghosts leave behind electromagnetic fields <i>(short: EMF)</i> when interacting with objects and at places they manifest at, however only certain ghosts can reach an EMF strength of level 5.</p>
-                            <p>You can measure the EMF strength of objects a ghost recently interacted with using an EMF Reader, or alternatively by watching your activity chart in the truck: if you see a spike of 5, it's possibly an EMF level 5 interaction.</p>
+                            <p>You can measure the EMF strength of objects a ghost recently interacted with using an <a href="#emf-reader">EMF Reader</a>, or alternatively by watching your activity chart in the <a href="#truck">truck</a> if you see a spike of 5, it's possibly an EMF level 5 interaction.</p>
                             <p>Ghosts will produce fields of strength 5 with about every other interaction on average - provided they're able to.</p>
                         </section>
                         <section class="page-half">
@@ -738,9 +739,9 @@
                     </header>
                     <div class="page-body">
                         <section class="page-half">
-                            <p>Ghost types with spirit box responses as an evidence can respond when talking to them on a spirit box.</p>
+                            <p>Ghost types with spirit box responses as an evidence can respond when talking to them on a <a href="#spirit-box">spirit box</a>.</p>
                             <p>Questions that have been reported to get responses are: asking the ghost about it's location, age, and whether it's friendly - however you are only able to get a reaction if the ghost is nearby and the light in the room is turned off.</p>
-                            <p>If the ghost responds, the ghost symbol on the spirit box will light up while the response is being played.</p>
+                            <p>If the ghost responds, the ghost symbol on the spirit box will light up to indicate that a response is being received.</p>
                         </section>
                         <section class="page-half">
                             <div class="image-wrapper">
@@ -758,7 +759,7 @@
                     <div class="page-body">
                         <section class="page-half">
                             <p>Specific ghosts leave behind hand- and fingerprints on certain objects after touching them.</p>
-                            <p>These are not visible on themselves, but ultraviolet light from UV flashlights or glowsticks can reveal them.</p>
+                            <p>These are not visible on themselves, but ultraviolet light from <a href="#uv-light">UV flashlights</a> or <a href="#glowstick">glowsticks</a> can reveal them.</p>
                             <p>Some types of objects that ghosts have been reported to leave prints on are:</p>
                             <ul>
                                 <li>Doors</li>
@@ -788,7 +789,7 @@
                     <div class="page-body">
                         <section class="page-half">
                             <p>Some ghosts are able to use a pen to write or draw something.</p>
-                            <p>Place a book with a pen in an area where the ghost often walks through and wait for the ghost to write in it.</p>
+                            <p>Place a <a href="#writing-book">book with a pen</a> in an area where the ghost often walks through and wait for the ghost to write in it.</p>
                             <p>
                                 The longer the ghost doesn't use the book, the less likely it is that it is able to do so.<br>
                                 If the book is thrown by the ghost without it being written or drawn in, you can rule out ghost writing - ghosts always prefer to write instead of throwing the book if they're able to.
@@ -820,7 +821,7 @@
                             <p>Ghost orbs form in the favourite room of some ghost types.</p>
                             <p>
                                 They appear as small balls of light randomly floating around for a short while before disappearing again.<br>
-                                To be able to spot them you should use a video camera with night vision and extinguish all lights in the room.
+                                To be able to spot them you should use a <a href="#video-camera">video camera</a> with night vision and extinguish all lights in the room.
                             </p>
                             <p><i>There have been reports of ghost orb sightings without the use of night vision, however this only seems to be possible in very specific lighting conditions, meaning that these are very rare occurances.</i></p>
                         </section>
@@ -839,8 +840,8 @@
                     </header>
                     <div class="page-body">
                         <section class="page-half">
-                            <p>Ghosts with this evidence can be made visible with a D.O.T.S sensor.</p>
-                            <p>Place a D.O.T.S sensor on the ground to cover the largest possible area with it and watch it for a silhouette quickly running through the area of the projected light dots.</p>
+                            <p>Ghosts with this evidence can be made visible with a <a href="#dots-sensor">D.O.T.S sensor</a>.</p>
+                            <p>Place such a sensor on the ground to cover the largest possible area with it and watch it for a silhouette quickly running through the area of the projected light dots.</p>
                             <p>It is possible to see these silhouettes with the naked eye, but it is easier to spot them through night vision.</p>
                         </section>
                         <section class="page-half">
@@ -1055,7 +1056,8 @@
                     <div class="page-body page-body-full">
                         <p>Halloween decorations have been removed and the Halloween '22 event has ended.</p>
                         <p>Ghost Huntin' Distribution added catalan to the list of available languages.</p>
-                        <p><a href="https://store.steampowered.com/news/app/739630/view/3435710744921094844" target="_blank"><i class="fa fa-up-right-from-square"></i> Full patch notes</a></p>
+                        <p><a href="https://store.steampowered.com/news/app/739630/view/3435710744921094844" target="_blank">Full list of changes</a></p>
+                        <p><a href="https://store.steampowered.com/news/app/739630" target="_blank">All updates</a></p>
                     </div>
                 </article>
 
