--- a/index.html
+++ b/index.html
@@ -1135,7 +1135,7 @@
                         <h1 id="update">Phasmophobia Update v0.7.3.0</h1>
                     </header>
                     <div class="page-body page-body-full">
-                        <p>Ghost Huntin' Distribution fixed a bunch of issues that have been affecting investigators, meanwhile they're hard at work on bigger changes.</p>
+                        <p>Ghost Huntin' Distribution fixed a bunch of issues that have been affecting investigators while continuing to work on bigger changes.</p>
                         <p>
                             <a href="https://store.steampowered.com/news/app/739630/view/3387297759145809768" target="_blank">Detailed list of changes</a><br>
                             <a href="https://store.steampowered.com/news/app/739630" target="_blank">All updates</a>
